--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <img src="./img/avatar.jpg" />
 </div>
 <h1>Luis Carlos Martínez</h1>
-<p>Av. 1 de Mayo #10A-30 Sur<br>3024358217</p>
+<p>Direccion[...]<br>3Telefono[...]</p>
 <section>
 <a href="https://www.facebook.com/c4arlos/" target="_blank">
  <i class="fab fa-facebook-f"></i>
@@ -43,7 +43,7 @@
 <h4>Nombre y Apellidos</h4>
 </div>
 <div class='descrition'>
-<p>Luis Carlos Martinez Guzman</p>
+<p>Luis Carlos Martinez</p>
 </div>
 </article>
 
@@ -52,16 +52,16 @@
 <h4>Lugar y fecha de nacimiento</h4>
 </div>
 <div class='descrition'>
-<p>13 de marzo de 2004</p>
+<p>[...]</p>
 </div>
 </article>
 
 <article class='course'>
 <div class='title'>
-<h4>Tarjeta de identidad</h4>
+<h4>Numero de documento:</h4>
 </div>
 <div class='descrition'>
-<p>1.090.272.162 de Bogotá</p>
+<p>[...]</p>
 </div>
 </article>
 
@@ -79,7 +79,7 @@
 <h4>Estado civil</h4>
 </div>
 <div class='descrition'>
-<p>Soltero</p>
+<p>[...]</p>
 </div>
 </article>
 
@@ -88,7 +88,7 @@
 <h4>Dirección</h4>
 </div>
 <div class='descrition'>
-<p>Av. 1 de Mayo #10A-30 Sur - Barrio Ciudad Jardin</p>
+<p>[...]</p>
 </div>
 </article>
 
@@ -97,7 +97,7 @@
 <h4>Numero telefónico</h4>
 </div>
 <div class='descrition'>
-<p>3024358217</p>
+<p>[...]</p>
 </div>
 </article>
 
@@ -118,7 +118,7 @@
 <h4>Sobre mí</h4>
 </div>
 <div class='descrition'>
-<p>Estudiante del Diseño y desaroollo de sistemas de información deseoso de formar parte del mundo laboral 
+<p>Estudiante del Diseño y desarollo de sistemas de información deseoso de formar parte del mundo laboral 
 y aprender acerca de la industria de la informatica antes de comenzar mi pregrado en ingenieria de sistemas. 
 Poseo los concimientos necesarios para desarrollar un sistema de información que cumpla con todos los requisitos
 establecidos, tanto de calidad, arquitectura y desarrollo del mismo.</p>
