Update personal info

--- a/cv3.html
+++ b/cv3.html
@@ -43,7 +43,7 @@
 <span>2019 - 2020</span> <strong>Grado decimo y undecimo</strong>
 </div>
 <div class="decrition">
-Colegio Aldemar Rojas Plazas
+[...]
 </div>
 </article>
 
@@ -61,7 +61,7 @@ SENA
 <span>2021 - 2021</span> <strong>Tecnólogo en diseño y desarrollo de software</strong>
 </div>
 <div>
-SENA
+[...]
 </div>
 </article>
 
@@ -70,8 +70,8 @@ SENA
 <section>
 <h3>Referencias</h3>
 <ul class="job-description">
-<li>Kewin Daniel Guzman Diaz - Cr 5 #8-26 Alejandría real V - 3024153384</li>
-<li>Mario Fernando Torres Ibagón - Av. 1 de mayo #10ª-30 sur - 3213865815</li>
+<li>Kewin  - [Dirección] - [Telefono] </li>
+<li>Mario  - [Dirección] - [Telefono] </li>
 </ul>
 </div>
 </div>
@@ -93,8 +93,8 @@ SENA
 <div class='column'>
 <h4>Numeros telefonicos</h4>
 <ul>
-<li>3024358217</li>
-<li>3145187270</li>
+<li>[Telefono]</li>
+<li>[Telefono]</li>
 </ul>
 </div>
 <div>
